--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+.grid-container {
+  display: inline-grid;
+  grid-template-columns: repeat(4, 3rem);
+  grid-template-rows: minmax(5rem, auto) repeat(5, 3rem);
+  background: #20343c;
+  padding: 10px;
+  border-radius: 10px;
+  gap: 10px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.grid-container > button{
+  border-radius: 5px;
+  outline: none;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  color: #ffffff;
+  background: transparent;
+  font-size: larger;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.screen {
+  grid-column: 1 / -1;
+  background: #ffffff;
+  padding: 20px 10px;
+  margin: -10px -10px 10px;
+  border-radius: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.output {
   display: flex;
+  min-height: 100px;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-end;
+  justify-content: space-between;
+  background: #e8eaeb;
+  padding: 15px 5px 15px;
+  border-radius: 5px;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
-.App-link {
-  color: #61dafb;
+.output .previous-operand {
+  font-weight: 400;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.output .current-operand {
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+.actions {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  margin-bottom: -10px;
+}
+
+span.del-digit {
+  cursor: pointer;
+  
 }
